service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portal-service
spec:
  selector:
    app: portal-app
  ports:
    - protocol: 'TCP'
      port: 11443
      targetPort: 11443
  type: LoadBalancer
